<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activities.loginFlow.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/dream_walk_logo"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:contentDescription="@string/logo" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_gravity="center"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/readex_pro_regular"
                android:textColor="@color/text_color"/>


            <TextView
                android:id="@+id/havingNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:text="@string/do_not_have_a_account_signup"
                android:textColor="#646266"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center"
                android:fontFamily="@font/readex_pro_regular"
                android:layout_marginBottom="@dimen/_15sdp"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:fontFamily="@font/readex_pro_regular"
                android:text="Email/Mobile"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/llMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/white_border_background"
                android:orientation="horizontal"
                android:weightSum="1"
                android:paddingHorizontal="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:autofillHints=""
                        android:background="@null"
                        android:fontFamily="@font/readex_pro_regular"
                        android:hint="Enter your email or mobile number"
                        android:maxLength="150"
                        android:paddingVertical="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/input_color"
                        android:textColorHint="@color/viewColor"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColor="@color/red"
                android:visibility="gone"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:fontFamily="@font/readex_pro_regular"
                android:text="Password"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/llPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/white_border_background"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_5sdp">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9">

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:paddingVertical="@dimen/_10sdp"
                            android:inputType="textPassword"
                            android:hint="Enter your password"
                            android:maxLength="30"
                            android:singleLine="true"
                            android:fontFamily="@font/readex_pro_regular"
                            android:textColor="@color/input_color"
                            android:textColorHint="@color/viewColor"
                            android:textSize="@dimen/_10sdp"
                            android:autofillHints="" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/MobilePasswordEye"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/passwordImage"
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:src="@drawable/eye_hide"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textColor="@color/red"
                android:visibility="gone"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"/>


            <CheckBox
                android:id="@+id/rememberCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:buttonTint="@color/theme_color"
                android:textColor="@color/text_color"
                android:fontFamily="@font/readex_pro_regular"/>





            <LinearLayout
                android:id="@+id/loginClickDisabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="true"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:background="@drawable/grey_background"
                android:focusable="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/readex_pro_regular"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/loginClick"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:clickable="true"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:focusable="true"
                android:background="@drawable/red_button_image">

                <TextView
                    android:id="@+id/buttonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/readex_pro_regular"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>





            <TextView
                android:id="@+id/ForgotPasswordClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:fontFamily="@font/readex_pro_regular"
                android:text="Forgot Password?"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_12sdp" />





        </LinearLayout>


        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/google_icon"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_below="@+id/mainLayout"
            android:layout_centerHorizontal="true"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="horizontal"
            android:layout_below="@+id/googleIcon"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp">


            <TextView
                android:id="@+id/termsAndCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro_light"
                android:text="Terms &amp; Conditions "
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro_light"
                android:text="and "
                android:textColor="@color/hintColor"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro_light"
                android:text="Privacy Policy"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_11sdp" />




        </LinearLayout>


    </RelativeLayout>








</androidx.core.widget.NestedScrollView>